--- a/demo.adoc
+++ b/demo.adoc
@@ -1,42 +1,43 @@
 == Bootiful React Demo Steps
 
+The brackets at the end of each step indicate the alias's or IntelliJ Live Templates to use. You can find the template definitions at https://github.com/mraible/idea-live-templates[mraible/idea-live-templates].
+
 === Spring Boot API
 
-. start.spring.io: h2, jpa, rest, and web [`bootiful-start`]
+. start.spring.io: h2, lombok, jpa, rest, web, and okta [`bootiful-start`]
 
-  http https://start.spring.io/starter.zip dependencies==h2,data-jpa,data-rest,web -d
+  http https://start.spring.io/starter.zip dependencies==h2,lombok,data-jpa,data-rest,web,okta \
+      packageName==com.okta.developer.demo -d
 
-. Add `Beer`, `BeerRepository`, `BeerCommandLineRunner` and add default beers
+. Comment out Okta starter in `pom.xml`
+
+. Add `Beer`, `BeerRepository`, `BeerCommandLineRunner` and add default beers [`boot-entity-lombok`, `boot-repo`, `boot-command`, `boot-add`]
 
 . Start and see list of beers in console
 
-. Add `RepositoryRestResource` to `BeerRepository`
-
-. Create `BeerController` with a `/good-beers` endpoint [`boot-good`]
+. Create `BeerController` with a `/good-beers` endpoint [`boot-controller`, `boot-good`]
 
 . Restart and confirm http://localhost:8080/good-beers works in browser and with http
 
   http POST :8080/beers name='Guinness'
-  http PUT :8080/beers/8 name='Guinness is good for you'
-  http DELETE :8080/beers/8
+  http PUT :8080/beers/10 name='Guinness is good for you'
+  http DELETE :8080/beers/10
 
 === React App
 
-. Run `create-react-app client --scripts-version=react-scripts-ts`; show app with `npm start`
+. Run `npx create-react-app client --typescript`; show app with `npm start`
 
-. Modify `App.tsx` and add a `componentDidMount()` method to fetch good beers [`fetch-beers`]
+. Modify `App.tsx` and add a `componentDidMount()` method to fetch good beers [`react-fetch`]
 
 . Create interfaces: `Beer`, `AppProps`, and `AppState`; add constructor and initialize state [`react-constructor`]
 
 . Change `render()` to show beers [`react-loading` and `react-beer-list`]
 
-. Modify `tslint.json` to fix issues [`tslint-rules`]
-
 . Configure CORS for Spring Boot and show list of beers
 
 . Create `BeerList.tsx` and copy code from `App.tsx`; change `App.tsx` to use `<BeerList/>`
 
-. Create `GiphyImage.tsx`; add to `BeerList`; show beers with images
+. Create `GiphyImage.tsx`; add to `BeerList`; show beers with images [`react-giphy`]
 
 === PWA Support
 
@@ -48,22 +49,32 @@
 
 === Authentication with Okta
 
-. Add Okta Spring Boot Starter and oauth2-autoconfigure [`okta-maven-boot` and `spring-oauth2`]
+. Uncomment Okta Spring Boot starter in `pom.xml`
 
-. Create OIDC app in Okta; add properties to `application.properties`, add `@EnableResourceServer`
+. Create OIDC app in Okta; add properties to `application.properties` [`okta-oauth2`]
 
-. Show access denied from http://localhost:8080
+. Create Security configuration for resource server [`oauth2-resource-server`]
 
-. Add Okta's React SDK [`okta-react`]
+  @Configuration
+  static class OktaOAuth2WebSecurityConfigurerAdapter extends WebSecurityConfigurerAdapter {
+      @Override
+      protected void configure(HttpSecurity http) throws Exception {
+          http
+              .authorizeRequests().anyRequest().authenticated()
+              .and()
+              .oauth2ResourceServer().jwt();
+      }
+  }
 
-  yarn add @okta/okta-react@1.0.2 react-router-dom@4.3.1
-  yarn add -D @types/react-router-dom@4.2.7
+. Add Okta's React SDK and configure
 
-. Update `App.tsx` to use `<Security/>` component [`react-security`]
+  npm install -g @angular-devkit/schematics-cli
+  npm i -D @oktadev/schematics
+  schematics @oktadev/schematics:add-auth
 
-. Create `src/okta.d.ts` with `declare module '@okta/okta-react';`
+. Show `App.tsx` and how it uses `<Security/>` component; show auth awareness in `Home.tsx`, add `BeerList`
 
-. Create `Home.tsx` to render the app shell, login/logout buttons, and use `<BeerList/>` [`react-home`]
+. Update `BeerList` to add `auth` to `BeerListProps`
 
 . Add CSS to `App.css` to make buttons more visible [`react-css`]
 
